# catdex-rs

./: .gitignore  Cargo.toml
src/: main.rs  models.rs
static/: index.html
