[package]
name = "catdex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
handlebars = { version = "3.0.1", features = ["dir_source"] }
serde_json = "1.0"
serde = "1.0.110"
r2d2 = "0.8.8"
